# testing

./: Cargo.toml  README.md
.sqlx/: query-9823346779a9c5a43e0eb8607f23099eb8e821bc969ebcc194966dfce60c9388.json
src/: main.rs
src/oracle/cardano/: compare.rs  dbsync.rs  mod.rs
