[package]
name = "testing"
version = "0.1.0"
edition = "2021"

[dependencies]
miette = { version = "7.4.0", features = ["fancy"] }
tokio = { version = "1.43.0", features = ["full"] }
utxorpc = "0.10.0"
clap = { version = "4.5", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "bigdecimal"] }
serde_json = "1.0.135"
futures = "0.3.31"
assert-json-diff = "2.0.2"
